--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "flowbite-react patch"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.10.7",
     "flowbite-react": "^0.11.7",
     "next": "15.3.0",
     "react": "^19.0.0",
